--- a/postgresql-compose.yml
+++ b/postgresql-compose.yml
@@ -11,7 +11,7 @@ services:
       - POSTGRES_PASSWORD=admin123
       - POSTGRES_DB=location_service
     volumes:
-      - postgres_data:/var/lib/postgresql/data  # Persist data to the host machine
+      - postgres_data:/var/lib/postgresql/data
 
 volumes:
   postgres_data:
