--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,13 @@
-version: '3'
+version: 'version'
 services:
-  fast-api:
+  nginx:
+    image: nginx:latest
+    container_name: nginx_reverse_proxy
+    ports:
+      - "8080:80"
+    depends_on:
+      - fastapi
+  fastapi:
     build:
       context: .
       dockerfile: Dockerfile 
@@ -24,25 +31,25 @@ services:
     volumes:
       - ./app:/app/app
 
-  postgres:
-    image: postgres:latest
-    container_name: postgres_container
-    ports:
-      - "5433:5432"
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+  # postgres:
+  #   image: postgres:latest
+  #   container_name: postgres_container
+  #   ports:
+  #     - "5433:5432"
+  #   environment:
+  #     - POSTGRES_USER=${POSTGRES_USER}
+  #     - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+  #     - POSTGRES_DB=${POSTGRES_DB}
+  #   volumes:
+  #     - postgres_data:/var/lib/postgresql/data
 
-  redis_db:
-    image: redis:latest
-    container_name: redis_container
-    ports:
-      - "6379:6379"  # Port mapping
-    volumes:
-      - redis_data:/data
+  # redis_db:
+  #   image: redis:latest
+  #   container_name: redis_container
+  #   ports:
+  #     - "6379:6379"  # Port mapping
+  #   volumes:
+  #     - redis_data:/data
 
 volumes:
   redis_data:
