--- a/.github/workflows/di.yml
+++ b/.github/workflows/di.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install flake8
 
       - name: Run flake8
         run: |
